--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 *{
     font-family: 'Inter', sans-serif;
-    color: black;
 }
 
 body{
@@ -167,7 +166,7 @@ hr{
     margin-bottom: 10px;
 }
 .dashboard .reservations .table-holder{
-    background-color: white;
+    background-color: #D9D9D9;
     padding: 10px;
 }
 .dashboard .reservations .table-holder .table-title{
@@ -180,7 +179,7 @@ hr{
     padding:20px;
 }
 .table-holder table{
-    background-color:#D9D9D9; 
+    background-color:white; 
     border: solid 2px black;      
 }
 table thead tr th{
@@ -272,3 +271,15 @@ table thead tr th{
 .student_equipment .d-flex .card{
     width: 15rem;
 }
+
+/* logs & accounts*/
+
+.logs-table{
+    padding-top: 15px;
+    padding-left:24px; 
+    padding-right:24px; 
+    font-weight:bold;
+    text-align:center;
+    margin-bottom: 10px;
+}
+
