--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,16 +361,20 @@ table thead tr th{
     margin-bottom: 10px;
 }
 
-/**/
-.register{
-    background: -webkit-linear-gradient(left, #800000, #CC3D3D);
-    margin-top: 3%;
-    padding: 3%;
+/*register*/
+#register{
+    text-align: center;
+    background: -webkit-linear-gradient(left, #800000, #383d41);
 }
 .register-left{
     text-align: center;
     color: #fff;
-    margin-top: 4%;
+    margin-top: 5.5%;
+}
+.register-left p{
+    font-weight: lighter;
+    padding: 12%;
+    margin-top: -9%;
 }
 .register-left input{
     border: none;
@@ -385,33 +389,27 @@ table thead tr th{
     cursor: pointer;
 }
 .register-right{
-    background: #f8f9fa;
+    background: #f5f5f5;
+    margin-top: 1.5%;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
+    text-align: center;
 }
-.register-left img{
-    margin-top: 15%;
+.register-heading{
+    margin-top: 4%;
+    color: black;
+}
+.register-right form{
+    padding-top: 4%;
+    width: 100%;
+    justify-content: center;
     margin-bottom: 5%;
-    width: 25%;
-    -webkit-animation: mover 2s infinite  alternate;
-    animation: mover 1s infinite  alternate;
+    position: relative;
+    display:grid;
+   
 }
-@-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
-}
-@keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
-}
-.register-left p{
-    font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
-}
-.register .register-form{
-    padding: 10%;
-    margin-top: 10%;
+.error{
+    margin-bottom: 2%;
 }
 .btnRegister{
     float: right;
@@ -419,41 +417,8 @@ table thead tr th{
     border: none;
     border-radius: 1.5rem;
     padding: 2%;
-    background: #0062cc;
+    background: #800000;
     color: #fff;
     font-weight: 600;
-    width: 50%;
     cursor: pointer;
-}
-.register .nav-tabs{
-    margin-top: 3%;
-    border: none;
-    background: #0062cc;
-    border-radius: 1.5rem;
-    width: 28%;
-    float: right;
-}
-.register .nav-tabs .nav-link{
-    padding: 2%;
-    height: 34px;
-    font-weight: 600;
-    color: #fff;
-    border-top-right-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
-}
-.register .nav-tabs .nav-link:hover{
-    border: none;
-}
-.register .nav-tabs .nav-link.active{
-    width: 100px;
-    color: #0062cc;
-    border: 2px solid #0062cc;
-    border-top-left-radius: 1.5rem;
-    border-bottom-left-radius: 1.5rem;
-}
-.register-heading{
-    text-align: center;
-    margin-top: 8%;
-    margin-bottom: -15%;
-    color: #495057;
 }
