--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ body,html{
     overflow-x: hidden;
     height: 100%;
     font-family: 'Bree Serif', serif;
-    
 }
 
 /* index */
@@ -369,28 +368,37 @@ table thead tr th{
 .register-left{
     text-align: center;
     color: #fff;
-    margin-top: 5.5%;
+    margin-top: 2%;
+}
+.register-left img{
+    width: 60%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.register-left h3{
+    font-weight: bold;
+    margin-top: 5%;
+    
 }
 .register-left p{
     font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
+    margin-top: 5%;
+    font-size: 20px;
 }
 .register-left input{
     border: none;
     border-radius: 1.5rem;
     padding: 2%;
-    width: 60%;
+    width: 30%;
     background: #f8f9fa;
     font-weight: bold;
-    color: #383d41;
-    margin-top: 30%;
+    color: black;
     margin-bottom: 3%;
     cursor: pointer;
 }
 .register-right{
     background: #f5f5f5;
-    margin-top: 1.5%;
+    margin-top: 2%;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
     text-align: center;
