--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,3 +413,8 @@ table thead tr th{
     text-align:center;
     margin-bottom: 10px;
 }
+
+/* accordion */
+.accordion:after {
+    content: "<?php echo $room_status ?>";
+}
