--- a/assets/css/background.css
+++ b/assets/css/background.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/bg_room_3d.png");
+    background-image: url("../images/index_bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
